--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.5",
+    "html-react-parser": "^5.2.3",
     "lucide-react": "^0.488.0",
     "marked": "^15.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
